--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ message(GIT: ${GIT_REFSPEC}, commit: ${GIT_REVISION_SHA})
 add_definitions(-DPROJECT_VERSION="0.1.0")
 add_definitions(-DGIT_REFSPEC=${GIT_REFSPEC} "-DGIT_REVISION_SHA=\"${GIT_REVISION_SHA}\"")
 add_definitions(-DGQL_LEVEL_DEBUG)
+add_definitions(-D_PRINT_FORMAT_)
+
 add_definitions(-DTHREAD_COUNT=4)
 
 include_directories(./include ./third_party/libmdbx ./third_party/eigen ./third_party/fmt/include)
