--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 project(GQLlite_Test)
 
-include_directories(../include)
+include_directories(../include ../third_party/catch2)
 
 set(TEST_GRAMMAR_SOURCE ./grammar.cpp)
 set(STORAGE_SOURCE
@@ -46,7 +46,7 @@ add_executable(storage ${STORAGE_SOURCE})
 add_executable(regress ${REGRESS_SOURCE})
 add_executable(algorithm ${OLGRITHM_SOURCE})
 
-set_property(TARGET algorithm PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
+set_property(TARGET algorithm PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/test")
 target_link_libraries(grammar PUBLIC gqlite fmt-header-only)
 target_link_libraries(regress PUBLIC gqlite fmt-header-only)
 target_link_libraries(storage PUBLIC mdbx-static fmt-header-only)
@@ -61,7 +61,6 @@ target_link_libraries(algorithm fmt-header-only)
 #  COMMENT "Generating test before"
 # )
 # add_dependencies(storage before_test)
-
 add_test(NAME storage COMMAND storage)
 add_test(NAME algorithm COMMAND algorithm)
 add_test(NAME grammar COMMAND grammar)
