--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ add_definitions(-D_PRINT_FORMAT_)
 
 add_definitions(-DTHREAD_COUNT=4)
 
-include_directories(./include ./third_party/libmdbx ./third_party/eigen ./third_party/fmt/include)
+include_directories(./include ./third_party/libmdbx ./third_party/eigen ./third_party/fmt/include ./third_party/boost_1_78_0/include)
 
 file(GLOB BASE_SOURCES "src/*.cpp")
 aux_source_directory(src/ParserEngine ParserEngine_SOURCES)
@@ -52,6 +52,7 @@ aux_source_directory(src/base Struct_SOURCES)
 aux_source_directory(src/operand Operand_SOURCES)
 aux_source_directory(src/operand/match Match_SOURCES)
 aux_source_directory(src/operand/distance Distance_SOURCES)
+aux_source_directory(src/Graph Graph_SOURCES)
 
 # set(FMT_CAN_MODULE ON CACHE BOOL "Build a module instead of a traditional library." FORCE)
 enable_testing()
@@ -65,7 +66,7 @@ add_definitions(-DYY_NO_UNISTD_H)
 add_library(gqlite
 	${BASE_SOURCES} ${ParserEngine_SOURCES} ${StorageEngine_SOURCES} ${Struct_SOURCES}
 	${Type_SOURCES} ${Memory_SOURCES} ${Feature_SOURCES} ${GQL_SOURCES} ${Operand_SOURCES}
-	${Match_SOURCES} ${Distance_SOURCES})
+	${Match_SOURCES} ${Distance_SOURCES} ${Graph_SOURCES})
 target_link_libraries(gqlite mdbx-static fmt::fmt)
 
 add_dependencies(gqlite generated_tokens generated_grammar)
