--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,17 +10,11 @@ env:
 
 jobs:
   pre-install:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
     - name: install-flex
-      if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get install -y flex bison
-    - name: update flex/bison
-      if: matrix.os == 'macos-latest'
-      run: |
-        sudo brew install flex
-        sudo brew install bison
         
   build:
     # The CMake configure and build commands are platform agnostic and should work equally
@@ -39,7 +33,11 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: recursive
-
+    - name: update flex/bison
+      if: matrix.os == 'macos-latest'
+      run: |
+        sudo brew install flex
+        sudo brew install bison
     - name: third_party
       run: |
         cd ${{github.workspace}}/third_party/libmdbx
