--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,7 +22,6 @@ jobs:
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ${{ matrix.os }}
-
     strategy:
       matrix:
         # os: [windows-latest, ubuntu-latest]
@@ -33,11 +32,6 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: recursive
-    - name: update flex/bison
-      if: matrix.os == 'macos-latest'
-      run: |
-        sudo brew install flex
-        sudo brew install bison
     - name: third_party
       run: |
         cd ${{github.workspace}}/third_party/libmdbx
@@ -49,6 +43,13 @@ jobs:
         cd ${{github.workspace}}/third_party/eigen
         git fetch --unshallow --tags --prune --force
         git branch
+    - name: update flex/bison
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew install flex
+        brew install bison
+        flex --version
+        bison --version
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
