--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third_party/eigen"]
 	path = third_party/eigen
 	url = https://gitlab.com/libeigen/eigen.git
+[submodule "third_party/libmdbx"]
+	path = third_party/libmdbx
+	url = https://gitflic.ru/project/erthink/libmdbx.git
