--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -49,7 +49,7 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         brew install bison
-        echo 'export PATH="/usr/local/opt/bison/bin:$PATH"' >> /Users/runner/.bash_profile
+        echo "::add-path::$(brew --prefix bison)/bin"
         cp /usr/local/opt/bison/bin/bison ${{github.workspace}}/tool/
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
