--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -49,8 +49,7 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         brew install bison
-        echo "::add-path::$(brew --prefix bison)/bin"
-        cp /usr/local/opt/bison/bin/bison ${{github.workspace}}/tool/
+        echo "$(brew --prefix bison)/bin" >> $GITHUB_PATH
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
