ci: build error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,13 @@ cmake_minimum_required(VERSION 3.0)
 project(GQLlite)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3")
+set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -openmp -march=native -fpic -ftree-vectorize -Ofast")
 IF (WIN32)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
 ELSEIF (APPLE)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -openmp -march=native -fpic -ftree-vectorize")
 ELSEIF (UNIX)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lrt -fpic -ftree-vectorize")
 set(CMAKE_C_FLAGS "-Wno-writable-strings -Wno-comment")
 include(CodeCoverage.cmake)
 APPEND_COVERAGE_COMPILER_FLAGS()
