ci: fixed symbol redefined

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,8 @@ aux_source_directory(src/operand Operand_SOURCES)
 aux_source_directory(src/operand/match Match_SOURCES)
 aux_source_directory(src/operand/analysis Analysis_SOURCES)
 aux_source_directory(src/operand/distance Distance_SOURCES)
+aux_source_directory(src/operand/query Query_SOURCES)
+aux_source_directory(src/operand/query/HNSW HNSW_SOURCES)
 aux_source_directory(src/Graph Graph_SOURCES)
 aux_source_directory(src/Path Path_SOURCES)
 
@@ -75,7 +77,8 @@ add_definitions(-DYY_NO_UNISTD_H)
 add_library(gqlite
 	${BASE_SOURCES} ${ParserEngine_SOURCES} ${StorageEngine_SOURCES} ${Struct_SOURCES}
 	${Type_SOURCES} ${Memory_SOURCES} ${Feature_SOURCES} ${GQL_SOURCES} ${Operand_SOURCES}
-	${Match_SOURCES} ${Distance_SOURCES} ${Graph_SOURCES} ${Path_SOURCES} ${Analysis_SOURCES})
+	${Match_SOURCES} ${Distance_SOURCES} ${Graph_SOURCES} ${Path_SOURCES} ${Analysis_SOURCES}
+	${Query_SOURCES} ${HNSW_SOURCES})
 target_link_libraries(gqlite mdbx-static fmt::fmt)
 
 add_dependencies(gqlite generated_tokens generated_grammar)
