--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ aux_source_directory(src/operand/query/HNSW HNSW_SOURCES)
 aux_source_directory(src/plan Plan_SOURCES)
 aux_source_directory(src/Graph Graph_SOURCES)
 aux_source_directory(src/Path Path_SOURCES)
+aux_source_directory(src/walk Walk_SOURCES)
 
 # set(FMT_CAN_MODULE ON CACHE BOOL "Build a module instead of a traditional library." FORCE)
 enable_testing()
@@ -82,7 +83,8 @@ add_library(gqlite
 	${BASE_SOURCES} ${StorageEngine_SOURCES} ${Struct_SOURCES}
 	${Type_SOURCES} ${System_SOURCES} ${Feature_SOURCES} ${GQL_SOURCES} ${Operand_SOURCES}
 	${Match_SOURCES} ${Distance_SOURCES} ${Graph_SOURCES} ${Path_SOURCES} ${Analysis_SOURCES}
-	${Query_SOURCES} ${HNSW_SOURCES} ${Language_SOURCES} ${Memory_SOURCES} ${Plan_SOURCES})
+	${Query_SOURCES} ${HNSW_SOURCES} ${Language_SOURCES} ${Memory_SOURCES} ${Plan_SOURCES}
+	${Walk_SOURCES})
 target_link_libraries(gqlite mdbx-static fmt::fmt)
 
 add_dependencies(gqlite generated_tokens generated_grammar)
