fix: add AddressSanitize for memleak; clean some ast node memleak;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,23 @@ ELSE ()
 ENDIF ()
 include(GetGitRevisionDescription.cmake)
 get_git_head_revision(GIT_REFSPEC GIT_REVISION_SHA)
+
+find_program(VALGRIND valgrind)
+if(VALGRIND)
+	# LY: cmake is ugly and nasty.
+	#      - therefore memcheck-options should be defined before including ctest;
+	#      - otherwise ctest may ignore it.
+	set(MEMORYCHECK_SUPPRESSIONS_FILE
+		"${CMAKE_CURRENT_SOURCE_DIR}/test/valgrind_suppress.txt"
+		CACHE FILEPATH "Suppressions file for Valgrind" FORCE)
+	set(MEMORYCHECK_COMMAND_OPTIONS
+		"--suppressions=${MEMORYCHECK_SUPPRESSIONS_FILE}"
+	# set(MEMORYCHECK_COMMAND_OPTIONS
+	# 	"--trace-children=yes --leak-check=full --track-origins=yes --error-exitcode=42 --error-markers=@ --errors-for-leak-kinds=definite --suppressions=${MEMORYCHECK_SUPPRESSIONS_FILE}"
+		CACHE STRING "Valgrind options" FORCE)
+	# include(CTest)
+endif()
+
 # get_git_unix_timestamp(GIT_REVISION_UNIX_TIMESTAMP)
 message(GIT: ${GIT_REFSPEC}, commit: ${GIT_REVISION_SHA})
 
@@ -43,6 +60,11 @@ if (${ENABLE_PRINT})
 add_definitions(-DGQL_LEVEL_DEBUG)
 add_definitions(-D_PRINT_FORMAT_)
 endif (${ENABLE_PRINT})
+
+if (${ENABLE_SANITIZE})
+add_compile_options(-fsanitize=leak -fno-omit-frame-pointer)
+add_link_options(-fsanitize=address -fno-omit-frame-pointer)
+endif()
 
 add_definitions(-DTHREAD_COUNT=4)
 
@@ -69,9 +91,9 @@ aux_source_directory(src/Path Path_SOURCES)
 aux_source_directory(src/walk Walk_SOURCES)
 
 # set(FMT_CAN_MODULE ON CACHE BOOL "Build a module instead of a traditional library." FORCE)
-enable_testing()
 add_subdirectory(third_party/libmdbx)
 add_subdirectory(third_party/fmt EXCLUDE_FROM_ALL)
+enable_testing()
 add_subdirectory(test)
 add_subdirectory(tool)
 
@@ -84,6 +106,9 @@ add_library(gqlite
 	${Query_SOURCES} ${HNSW_SOURCES} ${Language_SOURCES} ${Memory_SOURCES} ${Plan_SOURCES}
 	${Walk_SOURCES})
 target_link_libraries(gqlite mdbx-static fmt::fmt)
+if (${ENABLE_SANITIZE})
+target_link_libraries(gqlite asan)
+endif()
 
 add_dependencies(gqlite generated_tokens generated_grammar)
 
