fix: change edge ast and add print edge.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,8 +62,12 @@ add_definitions(-D_PRINT_FORMAT_)
 endif (${ENABLE_PRINT})
 
 if (${ENABLE_SANITIZE})
-add_compile_options(-fsanitize=leak -fno-omit-frame-pointer)
-add_link_options(-fsanitize=address -fno-omit-frame-pointer)
+	if (WIN32)
+		add_compile_options(/fsanitize=address)
+	else ()
+		add_compile_options(-fsanitize=leak -fno-omit-frame-pointer)
+		add_link_options(-fsanitize=address -fno-omit-frame-pointer)
+	endif()
 endif()
 
 add_definitions(-DTHREAD_COUNT=4)
@@ -107,7 +111,10 @@ add_library(gqlite
 	${Walk_SOURCES})
 target_link_libraries(gqlite mdbx-static fmt::fmt)
 if (${ENABLE_SANITIZE})
-target_link_libraries(gqlite asan)
+if (WIN32)
+else (WIN32)
+	target_link_libraries(gqlite asan)
+endif(WIN32)
 endif()
 
 add_dependencies(gqlite generated_tokens generated_grammar)
