--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,8 @@ add_definitions(-DGQL_LEVEL_DEBUG)
 add_definitions(-D_PRINT_FORMAT_)
 endif (${ENABLE_PRINT})
 
-if (${ENABLE_SANITIZE})
+option(ENABLE_SANITIZE "enable SANITIZE" false)
+if (ENABLE_SANITIZE)
 	if (WIN32)
 		add_compile_options(/fsanitize=address)
 	else ()
