--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -105,9 +105,8 @@ add_test(NAME regress_util COMMAND regress --inputdir=./util --outputdir=./util
 add_test(NAME regress_error COMMAND regress --inputdir=./error --outputdir=./error
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
-IF (WIN32)
-ELSE ()
-set(TARGETS_OF_LEAK_TO_CHECK storage)
+IF (UNIX)
+set(TARGETS_OF_LEAK_TO_CHECK storage vnet)
 
 foreach(LEAK_TARGET ${TARGETS_OF_LEAK_TO_CHECK})
 	target_compile_options(${LEAK_TARGET} PRIVATE -fsanitize=leak -fno-omit-frame-pointer)
