--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ aux_source_directory(src/walk Walk_SOURCES)
 # set(FMT_CAN_MODULE ON CACHE BOOL "Build a module instead of a traditional library." FORCE)
 add_subdirectory(third_party/libmdbx)
 add_subdirectory(third_party/zstd/build/cmake)
-add_subdirectory(third_party/fmt EXCLUDE_FROM_ALL)
+add_subdirectory(third_party/fmt)
 enable_testing()
 add_subdirectory(test)
 add_subdirectory(tool)
