--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "third_party/libmdbx"]
 	path = third_party/libmdbx
 	url = https://gitflic.ru/project/erthink/libmdbx.git
+[submodule "third_party/zstd"]
+	path = third_party/zstd
+	url = https://github.com/facebook/zstd.git
