--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -72,7 +72,13 @@ add_executable(movielens ${MOVIELENS_SOURCE})
 set_property(TARGET algorithm PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/test")
 target_link_libraries(grammar PUBLIC gqlite fmt::fmt-header-only)
 target_link_libraries(regress PUBLIC gqlite fmt::fmt-header-only)
+add_dependencies(storage zstd)
+IF (UNIX)
+link_directories(${zstd_BINARY_DIR}/lib)
+target_link_libraries(storage PUBLIC mdbx-static fmt::fmt-header-only ${zstd_BINARY_DIR}/lib/libzstd.a)
+ELSE()
 target_link_libraries(storage PUBLIC mdbx-static fmt::fmt-header-only)
+ENDIF()
 target_link_libraries(algorithm fmt::fmt-header-only)
 target_link_libraries(query fmt::fmt-header-only)
 target_link_libraries(movielens PUBLIC gqlite)
