fix: file busy error on ubuntu; fix some crash

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -69,23 +69,38 @@ add_executable(ptree ${PTREE_SOURCE})
 add_executable(vnet ${VNET_SOURCE})
 add_executable(movielens ${MOVIELENS_SOURCE})
 
+set(storage_LINK_OPTIONS fmt::fmt-header-only mdbx-static)
+set(vnet_LINK_OPTIONS fmt::fmt-header-only)
+set(grammar_LINK_OPTIONS gqlite fmt::fmt-header-only)
+set(movielens_LINK_OPTIONS gqlite)
+set(regress_LINK_OPTIONS gqlite fmt::fmt-header-only)
+IF (UNIX AND NOT APPLE)
+set(TARGETS_OF_LEAK_TO_CHECK storage vnet)
+
+foreach(LEAK_TARGET ${TARGETS_OF_LEAK_TO_CHECK})
+	target_compile_options(${LEAK_TARGET} PRIVATE -fsanitize=leak -fno-omit-frame-pointer)
+	target_link_options(${LEAK_TARGET} PRIVATE -fsanitize=address -fno-omit-frame-pointer)
+	set(${LEAK_TARGET}_LINK_OPTIONS ${${LEAK_TARGET}_LINK_OPTIONS} asan)
+endforeach()
+ENDIF ()
+
 set_property(TARGET algorithm PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/test")
-target_link_libraries(grammar PUBLIC gqlite fmt::fmt-header-only)
-target_link_libraries(regress PUBLIC gqlite fmt::fmt-header-only)
+target_link_libraries(grammar PUBLIC ${grammar_LINK_OPTIONS})
+target_link_libraries(regress PUBLIC ${regress_LINK_OPTIONS})
 add_dependencies(storage zstd)
 IF (UNIX)
 link_directories(${zstd_BINARY_DIR}/lib)
-target_link_libraries(storage PUBLIC mdbx-static fmt::fmt-header-only ${zstd_BINARY_DIR}/lib/libzstd.a)
+target_link_libraries(storage PUBLIC ${storage_LINK_OPTIONS} ${zstd_BINARY_DIR}/lib/libzstd.a)
 ELSE()
-target_link_libraries(storage PUBLIC mdbx-static fmt::fmt-header-only)
+target_link_libraries(storage PUBLIC ${storage_LINK_OPTIONS})
 ENDIF()
 target_link_libraries(algorithm fmt::fmt-header-only)
 target_link_libraries(query fmt::fmt-header-only)
-target_link_libraries(movielens PUBLIC gqlite)
+target_link_libraries(movielens PUBLIC ${movielens_LINK_OPTIONS})
 IF (WIN32)
-target_link_libraries(vnet PRIVATE fmt::fmt-header-only)
+target_link_libraries(vnet PRIVATE ${vnet_LINK_OPTIONS})
 ELSE ()
-target_link_libraries(vnet fmt::fmt-header-only pthread)
+target_link_libraries(vnet ${vnet_LINK_OPTIONS} pthread)
 ENDIF ()
 
 # find_package(Python3 COMPONENTS Interpreter Development)
@@ -117,11 +132,3 @@ add_test(NAME regress_error COMMAND regress --inputdir=./error --outputdir=./err
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 add_test(NAME movielens COMMAND movielens)
 
-IF (UNIX AND NOT APPLE)
-set(TARGETS_OF_LEAK_TO_CHECK storage vnet)
-
-foreach(LEAK_TARGET ${TARGETS_OF_LEAK_TO_CHECK})
-	target_compile_options(${LEAK_TARGET} PRIVATE -fsanitize=leak -fno-omit-frame-pointer)
-	target_link_options(${LEAK_TARGET} PRIVATE -fsanitize=address -fno-omit-frame-pointer)
-endforeach()
-ENDIF ()
