--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -65,7 +65,7 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
-        ctest -C Debug
+        ctest -C --output-on-failure Debug
     - name: Generate Coverage Report
       working-directory: ${{github.workspace}}/build
       if: matrix.os == 'ubuntu-latest'
