--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -64,6 +64,7 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      if: matrix.os == 'ubuntu-latest'
       run: |
         ctest -C --rerun-failed --output-on-failure Debug
     - name: Generate Coverage Report
