--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -64,9 +64,8 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      if: matrix.os == 'ubuntu-latest'
       run: |
-        ctest -C --rerun-failed --output-on-failure Debug
+        ctest -C Debug --rerun-failed --output-on-failure
     - name: Generate Coverage Report
       working-directory: ${{github.workspace}}/build
       if: matrix.os == 'ubuntu-latest'
