--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,27 +7,44 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -openmp -march=native -fpic -ftree-vectorize -Ofast")
 IF (WIN32)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
+# foreach(CMAKE_TARGET_FLAG
+# 	CMAKE_C_FLAGS_DEBUG_INIT
+# 	CMAKE_C_FLAGS_RELEASE_INIT
+# 	CMAKE_C_FLAGS_MINSIZEREL_INIT
+# 	CMAKE_C_FLAGS_RELWITHDEBINFO_INIT
+# 	CMAKE_CXX_FLAGS_DEBUG_INIT
+# 	CMAKE_CXX_FLAGS_MINSIZEREL_INIT
+# 	CMAKE_CXX_FLAGS_RELWITHDEBINFO_INIT
+# 	CMAKE_CXX_FLAGS_RELEASE_INIT
+# )
+# 	if (${CMAKE_TARGET_FLAG} MATCHES "/MD")
+# 		string(REGEX REPLACE "/MD" "/MT" ${CMAKE_TARGET_FLAG} "${${CMAKE_TARGET_FLAG}}")
+# 		message(STATUS "${CMAKE_TARGET_FLAG}:${${CMAKE_TARGET_FLAG}}")
+# 	endif()
+# endforeach()
 ELSEIF (APPLE)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -openmp -march=native -fpic -ftree-vectorize")
 ELSEIF (UNIX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lrt -fpic -ftree-vectorize")
 set(CMAKE_C_FLAGS "-Wno-writable-strings -Wno-comment")
-include(CodeCoverage.cmake)
-APPEND_COVERAGE_COMPILER_FLAGS()
-setup_target_for_coverage_gcovr_xml(
-	${PROJECT_NAME}_coverage NAME coverage
-	EXCLUDE
-		"include/json.hpp"
-		"tool/*"
-		"include/gql.hpp"
-		"include/gql.cpp"
-		"tool/getopt.c"
-		"tool/getopt.h"
-		"test/uint.hpp"
-		"third_party/catch2/catch.hpp"
-		"include/base/parallel/pam/*"
-		"include/base/parallel/parlay/*"
-)
+	if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+		include(CodeCoverage.cmake)
+		APPEND_COVERAGE_COMPILER_FLAGS()
+		setup_target_for_coverage_gcovr_xml(
+			${PROJECT_NAME}_coverage NAME coverage
+			EXCLUDE
+				"include/json.hpp"
+				"tool/*"
+				"include/gql.hpp"
+				"include/gql.cpp"
+				"tool/getopt.c"
+				"tool/getopt.h"
+				"test/uint.hpp"
+				"third_party/catch2/catch.hpp"
+				"include/base/parallel/pam/*"
+				"include/base/parallel/parlay/*"
+		)
+	endif()
 # ctest_coverage(BUILD test)
 ELSE ()
 ENDIF ()
@@ -51,12 +68,12 @@ if(VALGRIND)
 endif()
 
 # get_git_unix_timestamp(GIT_REVISION_UNIX_TIMESTAMP)
-message(GIT: ${GIT_REFSPEC}, commit: ${GIT_REVISION_SHA})
+# message(GIT: ${GIT_REFSPEC}, commit: ${GIT_REVISION_SHA})
 
 add_definitions(-DPROJECT_VERSION="0.1.0")
 add_definitions(-DGIT_REFSPEC=${GIT_REFSPEC} "-DGIT_REVISION_SHA=\"${GIT_REVISION_SHA}\"")
 
-option(ENABLE_PRINT "print debug info" false)
+option(GQLITE_ENABLE_PRINT "print debug info" false)
 if (${ENABLE_PRINT})
 add_definitions(-DGQL_LEVEL_DEBUG)
 add_definitions(-D_PRINT_FORMAT_)
@@ -94,18 +111,31 @@ enable_testing()
 add_subdirectory(test)
 add_subdirectory(tool)
 
-message("USE COMPILER: " ${CMAKE_CXX_COMPILER_ID})
+# message("USE COMPILER: " ${CMAKE_CXX_COMPILER_ID})
 add_definitions(-DYY_NO_UNISTD_H)
 add_compile_definitions(BINARY_DIR="${zstd_BINARY_DIR}/lib")
+option(GQLITE_BUILD_SHARED    "build gqlite shared library"   OFF)
+if (GQLITE_BUILD_SHARED)
+add_library(gqlite SHARED 
+	${BASE_SOURCES} ${StorageEngine_SOURCES} ${Struct_SOURCES}
+	${Type_SOURCES} ${System_SOURCES} ${Feature_SOURCES} ${GQL_SOURCES} ${Operand_SOURCES}
+	${Match_SOURCES} ${Distance_SOURCES} ${Graph_SOURCES} ${Path_SOURCES} ${Analysis_SOURCES}
+	${Query_SOURCES} ${HNSW_SOURCES} ${Language_SOURCES} ${Memory_SOURCES} ${Plan_SOURCES}
+	${Walk_SOURCES}
+)
+else()
 add_library(gqlite
 	${BASE_SOURCES} ${StorageEngine_SOURCES} ${Struct_SOURCES}
 	${Type_SOURCES} ${System_SOURCES} ${Feature_SOURCES} ${GQL_SOURCES} ${Operand_SOURCES}
 	${Match_SOURCES} ${Distance_SOURCES} ${Graph_SOURCES} ${Path_SOURCES} ${Analysis_SOURCES}
 	${Query_SOURCES} ${HNSW_SOURCES} ${Language_SOURCES} ${Memory_SOURCES} ${Plan_SOURCES}
-	${Walk_SOURCES})
+	${Walk_SOURCES}
+)
+endif()
 target_link_libraries(gqlite mdbx-static fmt::fmt )
 add_dependencies(gqlite zstd)
 if (WIN32)
+  
 else (WIN32)
 	#link_directories(${zstd_BINARY_DIR}/lib)
 	target_link_libraries(gqlite ${zstd_BINARY_DIR}/lib/libzstd.a)
