fix cmake build error; update GRAD model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(GQLlite)
 
 # set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -openmp -march=native -fpic -ftree-vectorize -Ofast")
+set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -fopenmp -march=native -fpic -ftree-vectorize -Ofast")
 IF (WIN32)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
 # foreach(CMAKE_TARGET_FLAG
@@ -23,7 +23,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
 # 	endif()
 # endforeach()
 ELSEIF (APPLE)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -openmp -march=native -fpic -ftree-vectorize")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -march=native -fpic -ftree-vectorize")
 ELSEIF (UNIX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lrt -fpic -ftree-vectorize")
 set(CMAKE_C_FLAGS "-Wno-writable-strings -Wno-comment")
