ci: fix sse/avx build error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ project(GQLlite)
 
 # set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -march=native -fpic -ftree-vectorize -Ofast")
 IF (WIN32)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
 # foreach(CMAKE_TARGET_FLAG
@@ -23,9 +22,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
 # 	endif()
 # endforeach()
 ELSEIF (APPLE)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -fpic -ftree-vectorize")
+set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -fpic -ftree-vectorize -Ofast")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -fpic -ftree-vectorize -mfma -mavx")
 ELSEIF (UNIX)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lrt -fpic -ftree-vectorize -fopenmp ")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -lrt -fpic -ftree-vectorize -fopenmp  -mfma -mavx")
 set(CMAKE_C_FLAGS "-Wno-writable-strings -Wno-comment")
 	if (CMAKE_BUILD_TYPE STREQUAL "Debug")
 		include(CodeCoverage.cmake)
